Revision history for Bot::IRC::X::WwwShorten

{{$NEXT}}
        - Update Travis YAML
        - Adding Perl versions to test; annual general update for 2018

1.01      2016-11-10 20:25:18-08:00 America/Los_Angeles
        - First version, released on an unsuspecting world